# morphosnaker

./: .gitignore  DEVELOPER.md  README.md  TODO.md  pyproject.toml
images/: morphosnaker.def
src/morphosnaker/: __init__.py
src/morphosnaker/denoise/: README.md  __init__.py  factory.py  mixin.py  module.py
src/morphosnaker/denoise/methods/: base.py
src/morphosnaker/denoise/methods/noise2void/: README.md  config.py  model.py  module.py
src/morphosnaker/extractor/: __init__.py  module.py
src/morphosnaker/extractor/methods/curration/: module.py
src/morphosnaker/extractor/methods/neighborhood/: module.py
src/morphosnaker/extractor/methods/shapes/: module.py
src/morphosnaker/segmentation/: __init__.py  abc.py  experiment_manager.py  factory.py  module.py  segmentation_methods.py  segmentation_wrapper.py  setup_experiment.py
src/morphosnaker/segmentation/methods/: base.py
src/morphosnaker/segmentation/methods/cellpose/: config.py  model.py  module.py
src/morphosnaker/utils/: README.md  __init__.py
src/morphosnaker/utils/image_utils/: __init__.py  base.py  module.py  processor.py
src/morphosnaker/utils/image_utils/methods/: __init__.py
src/morphosnaker/utils/image_utils/methods/visualisation/: plotting.py
tests/: conftest.py
tests/e2e/: test_2d_multilayer.py  test_2d_n2v_e2e.py  test_3d_n2v_e2e.py
tests/integration/: test_segmentation.py
tests/unit/: test_denoise_module.py  test_image_processor.py  test_segmentation.py
