[tool.poetry]
name = "morphosnaker"
version = "0.0.1"
description = "Segment, extract, analyse"
authors = ["Tatan47 <noah.bruderer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tifffile = "^2024.5.22"
numpy = ">=1.22,<1.24"
termcolor = "^2.4.0"
pytest = "^8.2.2"
setuptools = "^70.2.0"
n2v = "^0.3.3"
# Platform-specific TensorFlow
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin'" }
tensorflow = { version = "2.15.0", markers = "sys_platform != 'darwin'" }
plotly = "^5.23.0"
kaleido = "0.2.1"
docformatter = "^1.7.5"
cellpose = "^3.0.10"
ipython = "^8.26.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scikit-image = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
implicit_reexport = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]